--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./stylesheets/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
-  <h1>khilesh</h1>
-  <h2>anmol</h2>
+  <header class="header">
+		<h1 class="logo"><a href="#">Flexbox</a></h1>
+      <ul class="main-nav">
+          <li><a href="#">Home</a></i></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">services</a></li>
+
+          <li><a href="#">login/sign up</a></li>
+
+      </ul>
+	</header> 
+
 </body>
 </html>
