--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,32 @@
 * {
+	padding: 0%;
+	margin: 0%;
 	box-sizing: border-box;
 }
-body {
-	font-family: 'Montserrat', sans-serif;
-	line-height: 1.6;
-	margin: 0;
-	min-height: 100vh;
+html,body {
+	width: 100%;
+	height: 100%;
 }
+#main{
+	width: 100%;
+	height: 100%;
+}
+.header {
+	font-family: 'Montserrat', sans-serif;
+	width: 100%;
+	height: 10vh;
+	padding-top: .5em;
+	padding-bottom: .5em;
+	border: 1px solid #a2a2a2;
+	background-color: #f4f4f4;
+	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -22,17 +42,15 @@ a {
 	text-decoration: none;
 }
 
-
-
 .logo {
 	margin : 0;
-  margin-left:75px;
+    margin-left:75px;
 	font-size: 1.45em;
 }
 
 .main-nav {
 	margin-top: 5px;
-margin-right: 78px;
+    margin-right: 78px;
 }
 .logo a,
 .main-nav a {
@@ -40,7 +58,7 @@ margin-right: 78px;
 	text-transform: uppercase;
 	text-align: center;
 	display: block;
-  font-weight: 500;
+    font-weight: 500;
 }
 
 .main-nav a {
