--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,18 +8,22 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-		<h1 class="logo"><a href="#">Flexbox</a></h1>
-      <ul class="main-nav">
-          <li><a href="#">Home</a></i></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">services</a></li>
+  <div id="main">
+      <header class="header">
+        <h1 class="logo"><a href="#">Flexbox</a></h1>
+          <ul class="main-nav">
+              <li><a href="#">Home</a></i></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">services</a></li>
 
-          <li><a href="#">login/sign up</a></li>
+              <li><a href="#">login/sign up</a></li>
 
-      </ul>
-	</header> 
-
+          </ul>
+      </header> 
+      <div class="homepage">
+        
+      </div>
+  </div>
 </body>
 </html>
