--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
               <li><a href="#">Contact</a></li>
               <li><a href="#">services</a></li>
 
-              <li><a href="#">login/sign up</a></li>
+              <li><a href="/get-started">login/sign up</a></li>
 
           </ul>
       </header> 
