--- a/public/stylesheets/get-started.css
+++ b/public/stylesheets/get-started.css
@@ -10,6 +10,80 @@ html,body{
 }
 
 
+.header {
+	font-family: 'Montserrat', sans-serif;
+	width: 100%;
+	height: 10vh;
+	padding-top: .5em;
+	padding-bottom: .5em;
+	border: 1px solid #a2a2a2;
+	background-color: #f4f4f4;
+	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+    display: flex;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+
+h2,h3,a {
+	color: #34495e;
+}
+
+a {
+	text-decoration: none;
+}
+
+.logo {
+	margin : 0;
+    margin-left:75px;
+	font-size: 1.45em;
+}
+
+.main-nav {
+	margin-top: 5px;
+    margin-right: 78px;
+    display: flex;
+   
+}
+.logo a,
+.main-nav a {
+	padding: 10px 35px;
+	text-transform: uppercase;
+	text-align: center;
+	display: block;
+    font-weight: 500;
+}
+
+.main-nav a {
+	color: #34495e;
+	font-size: .99em;
+}
+
+.main-nav a:hover {
+	color: #285e9c;
+}
+
+.header {
+	padding-top: .5em;
+	padding-bottom: .5em;
+	border: 1px solid #a2a2a2;
+	background-color: #f4f4f4;
+	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
 
 .get-started{
     /* background-color: red; */
@@ -105,7 +179,6 @@ background-color:#cde9d5;
 
 @media screen and (max-width: 650px) {
    
-
     .get-started{
         /* background-color: red; */
         width: 100vw;
