--- a/views/get-started.ejs
+++ b/views/get-started.ejs
@@ -8,6 +8,18 @@
 </head>
 <body>
     <div class="main">
+        <header class="header">
+            <h1 class="logo"><a href="#">Flexbox</a></h1>
+              <ul class="main-nav">
+                  <li><a href="/">Home</a></i></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">services</a></li>
+    
+                  <li><a href="/get-started">Help</a></li>
+    
+              </ul>
+          </header> 
         <div class="get-started">
                <h1>How do you want to use Saksham?</h1>
                
