--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,6 +84,58 @@ a {
   width: 100%;
 }
 
+    /* written by anmol header jisme chhose krna time and station */
+
+
+	.functions {
+		margin-top: 60px;
+		display: flex;
+		align-items: center;
+		background-color: #a88148;
+		padding: 10px;
+		font-family: "Roboto", sans-serif;
+		height: 200px;
+	  }
+	  
+	  .functions label {
+		color: #ffffff;
+		margin-right: 10px;
+		font-size: larger;
+	  }
+	  
+	  .functions select,
+	  .functions input[type="time"],
+	  .functions button {
+		margin-right: 50px;
+		font-family: "Roboto", sans-serif;
+	  }
+	  
+	  .functions select,
+	  .functions input[type="time"] {
+		border: none;
+		width: 97px;
+		height: 35px;
+		font-size: large;
+		border-radius: 12px;
+		background-color: #ffffff;
+		padding: 5px 10px;
+		color: #383e56;
+	  }
+	  
+	  .functions button {
+		background-color: #08e025;
+		border: none;
+		color: #ffffff;
+		font-size: large;
+		padding: 8px 20px;
+		cursor: pointer;
+		width: 100px;
+		height: 40px;
+		border-radius: 12px;
+	  }
+	  
+		/* written by anmol header jisme chhose krna time and station ==end */
+	
 
 /* home page css code------------------------ */
 .homepage{
@@ -92,8 +144,11 @@ a {
 	/* background-color: green; */
 }
 .swiper {
-	width: 80%;
+	position: absolute;
+	top: 35%;
+	width: 100%;
    height: 100%;
+   
    /* background-color: #285e9c; */
  }
  
