--- a/public/stylesheets/get-started.css
+++ b/public/stylesheets/get-started.css
@@ -7,83 +7,10 @@ html,body{
     height: 100%;
     width: 100%;
     /* background-color: black; */
+    overflow-x: hidden;
 }
 
 
-.header {
-	font-family: 'Montserrat', sans-serif;
-	width: 100%;
-	height: 10vh;
-	padding-top: .5em;
-	padding-bottom: .5em;
-	border: 1px solid #a2a2a2;
-	background-color: #f4f4f4;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-    display: flex;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-
-h2,h3,a {
-	color: #34495e;
-}
-
-a {
-	text-decoration: none;
-}
-
-.logo {
-	margin : 0;
-    margin-left:75px;
-	font-size: 1.45em;
-}
-
-.main-nav {
-	margin-top: 5px;
-    margin-right: 78px;
-    display: flex;
-   
-}
-.logo a,
-.main-nav a {
-	padding: 10px 35px;
-	text-transform: uppercase;
-	text-align: center;
-	display: block;
-    font-weight: 500;
-}
-
-.main-nav a {
-	color: #34495e;
-	font-size: .99em;
-}
-
-.main-nav a:hover {
-	color: #285e9c;
-}
-
-.header {
-	padding-top: .5em;
-	padding-bottom: .5em;
-	border: 1px solid #a2a2a2;
-	background-color: #f4f4f4;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-}
 
 .get-started{
     /* background-color: red; */
@@ -98,6 +25,7 @@ a {
     flex-direction: column;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
    padding: 6vw;
+
 
 /* margin-top: vw; */
 
@@ -165,7 +93,8 @@ background-color:#cde9d5;
     border: none;
     color:#ffffff;
     font-weight: 100;
-    background-color: #068932;
+    /* background-color: #068932; */
+    background-color: #d90403;
     font-family: 'Open Sans', sans-serif;
     cursor: pointer;
     transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
@@ -175,6 +104,7 @@ background-color:#cde9d5;
 }
 .get-started-sign>button:hover{
     scale: 1.1;
+    background-color: #068932;
 }
 
 @media screen and (max-width: 650px) {
@@ -272,6 +202,7 @@ background-color:#cde9d5;
         color:#ffffff;
         font-weight: 100;
         background-color: #068932;
+        background-color: #d90403;
         font-family: 'Open Sans', sans-serif;
         cursor: pointer;
         transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
@@ -283,3 +214,22 @@ background-color:#cde9d5;
         scale: 1.1;
     }
   }
+
+  @media only screen and (min-width: 820px) and (max-width: 1023px) {
+    /* CSS rules specific to iPad Air */
+    .get-started {
+      /* Your styles for .get-started on iPad Air */
+       height: 65vh;
+    }
+    
+    
+    .get-started-sign{
+    height:30vh ;
+    }
+    
+    /* Styles for other elements on iPad Air */
+    
+    /* Example styles for buttons */
+   
+  }
+  
