--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,134 +6,58 @@
 html,body {
 	width: 100%;
 	height: 100%;
+	scroll-behavior: smooth;
 }
 #main{
 	width: 100%;
 	height: 100%;
 }
-.header {
-	font-family: 'Montserrat', sans-serif;
-	width: 100%;
-	height: 10vh;
-	padding-top: .5em;
-	padding-bottom: .5em;
-	border: 1px solid #a2a2a2;
-	background-color: #f4f4f4;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-}
+/* Navbar Styles */
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-
-h2,h3,a {
-	color: #34495e;
-}
-
-a {
-	text-decoration: none;
-}
-
-.logo {
-	margin : 0;
-    margin-left:75px;
-	font-size: 1.45em;
-}
-
-.main-nav {
-	margin-top: 5px;
-    margin-right: 78px;
-}
-.logo a,
-.main-nav a {
-	padding: 10px 35px;
-	text-transform: uppercase;
-	text-align: center;
-	display: block;
-    font-weight: 500;
-}
-
-.main-nav a {
-	color: #34495e;
-	font-size: .99em;
-}
-
-.main-nav a:hover {
-	color: #285e9c;
-}
-
-.header {
-	padding-top: .5em;
-	padding-bottom: .5em;
-	border: 1px solid #a2a2a2;
-	background-color: #f4f4f4;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-  width: 100%;
-}
-
+  /* Media Query for Mobile */
+  @media (max-width: 768px) {
+	.main-nav {
+	  display: none;
+	}
+  
+	.menu-toggle {
+	  display: block;
+	}
+  
+	.menu-open .main-nav {
+	  display: flex;
+	}
+  }
+  
     /* written by anmol header jisme chhose krna time and station */
 
 
 	.functions {
-		margin-top: 60px;
 		display: flex;
-		align-items: center;
-		background-color: #a88148;
-		padding: 10px;
-		font-family: "Roboto", sans-serif;
-		height: 200px;
+		flex-wrap: wrap;
+		gap: 10px;
+		font-family: Arial, sans-serif;
+		padding: 4vw 10vw;
+		background-color: #95a7b8;
 	  }
-	  
-	  .functions label {
-		color: #ffffff;
-		margin-right: 10px;
-		font-size: larger;
+  
+	  label {
+		font-weight: bold;
+		color: rgb(64, 50, 50);
 	  }
-	  
-	  .functions select,
-	  .functions input[type="time"],
-	  .functions button {
-		margin-right: 50px;
-		font-family: "Roboto", sans-serif;
+  
+	  select, input, button {
+		padding: 5px;
+		border: 1px solid red;
+		border-radius: 4px;
+		font-size: 16px;
 	  }
-	  
-	  .functions select,
-	  .functions input[type="time"] {
-		border: none;
-		width: 97px;
-		height: 35px;
-		font-size: large;
-		border-radius: 12px;
-		background-color: #ffffff;
-		padding: 5px 10px;
-		color: #383e56;
-	  }
-	  
-	  .functions button {
-		background-color: #08e025;
-		border: none;
-		color: #ffffff;
-		font-size: large;
-		padding: 8px 20px;
+  
+	  button {
+		background-color: red;
+		color: white;
 		cursor: pointer;
-		width: 100px;
-		height: 40px;
-		border-radius: 12px;
 	  }
-	  
 		/* written by anmol header jisme chhose krna time and station ==end */
 	
 
@@ -203,6 +127,20 @@ a {
 		justify-content: space-between;
 	}
 
+}
+@media screen and (max-width:550){
+	.functions {
+		margin-top: 0px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		background-color: #a88148;
+		padding: 10px;
+		font-family: "Roboto", sans-serif;
+		height: 200px;
+	  }
+
+	
 }
 
 
