--- a/views/get-started.ejs
+++ b/views/get-started.ejs
@@ -4,24 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="\stylesheets\get-started.css">
+    <link rel="stylesheet" href="\stylesheets\nav.css">
     <title>Document</title>
 </head>
 <body>
     <div class="main">
+        
         <header class="header">
-            <h1 class="logo"><a href="#">Flexbox</a></h1>
+            <img src="\images\logo.jpg" alt="" class="logo">
+            <nav class="navbar">
               <ul class="main-nav">
-                  <li><a href="/">Home</a></i></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                  <li><a href="#">services</a></li>
-    
-                  <li><a href="/get-started">Help</a></li>
-    
+                <li><a href="/">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#footer-container" >Contact</a></li>
+                <li><a href="#">Services</a></li>
+                <!-- <li><a href="/get-started" id="contect">Login/Sign up</a></li> -->
               </ul>
-          </header> 
+            </nav>
+            <button class="menu-toggle">&#9776;</button>
+          </header>
         <div class="get-started">
-               <h1>How do you want to use Saksham?</h1>
+               <h1>How do you want to use Vaidehi?</h1>
                
                <p> No matter the occasion you can celebrate at our <span>place!</span> </p>
               <div class="get-startedchild">
@@ -37,6 +40,8 @@
              </div>
               </div>
         </div>
+        <% include ./footer/footer.ejs %>
+        <script src="\javascripts\nav.js"></script>
     </div>
    
     
