--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,50 +11,41 @@
 </head>
 <body>
   <div id="main">
-      <header class="header">
-        <h1 class="logo"><a href="#">Flexbox</a></h1>
-          <ul class="main-nav">
-              <li><a href="#">Home</a></i></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">services</a></li>
-
-              <li><a href="/get-started">login/sign up</a></li>
-
-          </ul>
-      </header> 
+   
+    <% include ./footer/nav.ejs %>
+    
 
 
     <!--      written by anmol header jisme chhose krna time and station-->
     <div class="functions">
-        <label for="station">Choose Station:</label>
-        <select id="station">
-          <option value="station1">Station 1</option>
-          <option value="station2">Station 2</option>
-          <option value="station3">Station 3</option>
-          <!-- Add more stations if needed -->
-        </select>
-      
-        <label for="check-in-time">Check-in Time:</label>
-        <input type="time" id="check-in-time" step="1800">
-      
-        <label for="check-out-time"> Check-out Time:</label>
-        <input type="time" id="check-out-time" step="1800">
-      
-        <label for="beds">Choose Number of Beds:</label>
-        <select id="beds">
-          <option value="1">1 bed</option>
-          <option value="2">2 beds</option>
-          <option value="3">3 beds</option>
-          <!-- Add more bed options if needed -->
-        </select>
-      
-        <button id="search-btn">Search</button>
-      </div>
+      <label for="station">Choose Station:</label>
+      <select id="station">
+        <option value="station1">Station 1</option>
+        <option value="station2">Station 2</option>
+        <option value="station3">Station 3</option>
+        <!-- Add more stations if needed -->
+      </select>
+  
+      <label for="check-in-time">Check-in Time:</label>
+      <input type="time" id="check-in-time" step="1800">
+  
+      <label for="check-out-time"> Check-out Time:</label>
+      <input type="time" id="check-out-time" step="1800">
+    
+      <label for="beds">Choose Number of Beds:</label>
+      <select id="beds">
+        <option value="1">1 bed</option>
+        <option value="2">2 beds</option>
+        <option value="3">3 beds</option>
+        <!-- Add more bed options if needed -->
+      </select>
+  
+      <button id="search-btn">Search</button>
+    </div>
     <!-- /* written by anmol header jisme chhose krna time and station ==end */ -->
         
 
-      <div class="homepage">
+      <!-- <div class="homepage">
 
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
@@ -72,9 +63,11 @@
           </div>
         </div>
 
-      </div>
+      </div> -->
+      
+      <% include ./footer/footer.ejs %>
   </div>
-
+   
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
  <script src="/javascripts/script.js"></script>
 </body>
