--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -13,11 +13,13 @@ footer {
 
 .footer-container {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     max-width: 960px;
     margin: 0 auto;
+    background-color: #c3b0b0;
 }
 
 .footer-container p {
