--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -7,7 +7,8 @@ body {
 }
 
 footer {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    background-color: #d8d5d5;
     padding: 20px;
 }
 
@@ -19,7 +20,7 @@ footer {
     align-items: center;
     max-width: 960px;
     margin: 0 auto;
-    background-color: #c3b0b0;
+
 }
 
 .footer-container p {
