--- a/views/get-started.ejs
+++ b/views/get-started.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="\stylesheets\get-started.css">
     <link rel="stylesheet" href="\stylesheets\nav.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="\images\logot.png" type="image/x-icon">
+    <title>get-started-sign-in</title>
 </head>
 <body>
     <div class="main">
