--- a/views/get-started.ejs
+++ b/views/get-started.ejs
@@ -32,11 +32,15 @@
                 <div class="user-get-started  get-started-sign">
                     <h4> USER</h4>
                     <p>"Join our exclusive lounge booking community and gain access to a seamless booking experience. </p>
+                        <a href="/new-user" class="new user">Register new-user</a>
+                    <br>
                     <button >sign-in</button>
              </div>
              <div class="provider-get-started get-started-sign  "  >
                  <h4>PROVIDER</h4>
                  <p> As an administrator, you hold the keys to manage and oversee the lounge booking platform</p>
+                      <a href="" class="new-user">Register new-user</a>
+                 <br>
                  <button>sign-in</button>
              </div>
               </div>
