--- a/public/stylesheets/get-started.css
+++ b/public/stylesheets/get-started.css
@@ -79,6 +79,13 @@ background-color:#cde9d5;
     /* background-color: red; */
     width: 35vw;
 }
+.get-started-sign a{
+    height: 1%;
+    font-size: 0.8rem;
+    /* text-decoration: none; */
+    color: #068932;
+}
+
 .get-started-sign>p{
     padding: 1.8vw;
     font-size: 1.2vw;
@@ -107,7 +114,7 @@ background-color:#cde9d5;
     background-color: #068932;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 820px) {
    
     .get-started{
         /* background-color: red; */
@@ -193,11 +200,12 @@ background-color:#cde9d5;
         width: 57hw;
     
     }
+  
     .get-started-sign>button{
         font-size:3vw;
         border-radius: 10px;
-        margin-top: 3vh;
-        padding: 1.6vw 4.6vh;
+        margin-top: 1.5vh;
+        padding: 1.3vw 4.6vh;
         border: none;
         color:#ffffff;
         font-weight: 100;
@@ -224,7 +232,7 @@ background-color:#cde9d5;
     
     
     .get-started-sign{
-    height:30vh ;
+    height:37vh ;
     }
     
     /* Styles for other elements on iPad Air */
