--- a/views/footer/footer.ejs
+++ b/views/footer/footer.ejs
@@ -14,25 +14,37 @@
           <div class="footer-link-div">
             <ul class="footer-links">
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="#">About Us</a></li>
               <li><a href="#">Contact</a></li>
+              <li><a href="#">Support</a></li>
+              
+             
+          
             </ul>
             <ul class="footer-links">
               <li><a href="#">Book Table</a></li>
               <li><a href="#">Food Order</a></li>
               <li><a href="#">Hotels Near Me</a></li>
+              <li><a href="#">All city Hotels</a></li>
+             
+              
             </ul>
             <ul class="footer-links">
               <li><a href="#">Terms and Conditions</a></li>
               <li><a href="#">Support</a></li>
               <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Trust And Safety</a></li>
+             
+              <!-- <li><a href="#"></a></li> -->
             </ul>
-            <ul class="footer-links" id="last-links">
-              <li><a href="#">Contact:--1234567890</a></li>
-              <li><a href="#">Email:--AIDEHI@GMAIL.COM</a></li>
-            </ul>
+           
           </div>
-        
+          <br>
+          <ul class="footer-links" id="last-links">
+            <li><a href="#">Contact:--1234567890</a></li>
+            <li><a href="#">Email:--VAIDEHI@GMAIL.COM</a></li>
+            <li><a href="">Address:-Jinsi, 18, Shankar Ganj, Indore, Madhya Pradesh 452006</a></li>
+          </ul>
           <div class="footer-icon">
             <i class="ri-facebook-circle-fill"></i>
             <i class="ri-instagram-fill"></i>
