--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,7 @@ html,body {
 #main{
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
 }
 /* Navbar Styles */
 
@@ -60,10 +61,7 @@ html,body {
 		
 	  }
 
-	  #search-btn{
-		margin-left: 1.4vw;
-		
-	  }
+	  
 		/* written by anmol header jisme chhose krna time and station ==end */
 	
 
