--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,7 @@
   
     <% include ./about.ejs %>
       <% include ./footer/footer.ejs %>
+      <% include ./footer/footer.ejs %>
   </div>
    
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
