--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,8 +48,8 @@
     <!-- /* written by anmol header jisme chhose krna time and station ==end */ -->
         
 
-  
-     <% include ./about.ejs %>
+      <% include ./slider.ejs %>
+      <% include ./about.ejs %>
       <% include ./footer/footer.ejs %>
      
   </div>
