code added in login and register page

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -68,7 +68,9 @@ body {
   border-radius: 3px;
   cursor: pointer;
 }
-
+.form-container .google-btn{
+  margin-top: 1vh;
+}
 .form-container button:hover {
   background-color: #45a049;
 }
