--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,34 +9,20 @@
 <body>
       <div class="form-container">
         <h2>Login</h2>
-        <form class="login-form">
-          <div>
-            <input type="text" id="username" placeholder="Username" required />
-          </div>
-          <div>
-            <input type="password" id="password" placeholder="Password" required/>
-          </div>
-          <button type="submit">Login</button>
-          <p class="toggle-form-login">Already registered? Click here to login</p>
-        </form>
-  
-        <form class="register-form" action="/register" method="post">
-          <h2>Register</h2>
-          <div>
-            <input type="text" id="fullname" placeholder="Full Name" name="name" required />
-          </div>
-          <div>
-            <input type="email" id="email" placeholder="Email" name="email" required />
-          </div>
+        <form class="login-form" action="/login" method="post">
           <div>
             <input type="text" id="username" placeholder="username" name="username" required />
           </div>
           <div>
             <input type="password" id="password" placeholder="Password" name="password" required/>
           </div>
-          <button type="submit">Register</button>
-          <p class="toggle-form-register">Not registered? Click here to register</p>
+
+          <button type="submit">Login</button> 
+          <button class="google-btn">Login with Google</button>
+
+          <p class="toggle-form-login">If you don't have account? Click here to register</p>
         </form>
+        <a href="/register">Register</a>
       </div>
 </body>
 </html> 
