--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -30,13 +30,18 @@ footer {
 .footer-link-div {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     margin-top: 20px;
+    justify-content: center;
+
+    /* padding: 1vw; */
+    overflow-x: hidden;
 }
 
 .footer-links {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 0 3vw;
     
     margin-right: 70px;
 }
@@ -65,7 +70,7 @@ hr {
     border-top: 1px solid #ccc;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 622px) {
     /* Styles for smaller screens */
     .footer-links {
         margin-bottom: 20px;
@@ -76,8 +81,8 @@ hr {
         flex-direction: column;
     }
     .footer-icon i {
-        margin-right: 10px;
-        font-size: 10px;
+        margin-right: 15px;
+        font-size: 14px;
        
     }
 }
