--- a/views/footer/footer.ejs
+++ b/views/footer/footer.ejs
@@ -50,6 +50,7 @@
             <i class="ri-instagram-fill"></i>
             <i class="ri-twitter-fill"></i>
             <i class="ri-whatsapp-fill"></i>
+            <i class="ri-google-play-fill"></i>
           </div>
         </div>
     </footer>
