--- a/views/get-started.ejs
+++ b/views/get-started.ejs
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\stylesheets\get-started.css">
+   
     <link rel="stylesheet" href="\stylesheets\nav.css">
+    <link rel="stylesheet" href="\stylesheets\get-started.css">
     <link rel="shortcut icon" href="\images\logot.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
     <title>get-started-sign-in</title>
 </head>
 <body>
@@ -32,18 +34,18 @@
                 <div class="user-get-started  get-started-sign">
                     <h4> USER</h4>
                     <p>"Join our exclusive lounge booking community and gain access to a seamless booking experience. </p>
-                        <a href="/new-user" class="new user">Register new-user</a>
+                       
                     <br>
 
                       <button >
-                        <a href="/login"> sign-in</a>
+                        <a href="/login" id="get-btn"> sign-in</a>
                       </button>
 
              </div>
              <div class="provider-get-started get-started-sign  "  >
                  <h4>PROVIDER</h4>
                  <p> As an administrator, you hold the keys to manage and oversee the lounge booking platform</p>
-                      <a href="" class="new-user">Register new-user</a>
+                     
                  <br>
 
                   <button>
