--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,9 @@
         <!-- Add more bed options if needed -->
       </select>
   
-      <button id="search-btn">Search</button>
+      <button id="search-btn">
+        <a href="/enquiry">Search</a>
+      </button>
     </div>
     <!-- /* written by anmol header jisme chhose krna time and station ==end */ -->
         
