--- a/views/get-started.ejs
+++ b/views/get-started.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="main">
         
-        <header class="header">
+          <header class="header">
             <img src="\images\logo.jpg" alt="" class="logo">
             <nav class="navbar">
               <ul class="main-nav">
@@ -38,8 +38,8 @@
                       <button >
                         <a href="/login"> sign-in</a>
                       </button>
-
              </div>
+
              <div class="provider-get-started get-started-sign  "  >
                  <h4>PROVIDER</h4>
                  <p> As an administrator, you hold the keys to manage and oversee the lounge booking platform</p>
@@ -47,7 +47,7 @@
                  <br>
 
                   <button>
-                    <a href="/login">sign-in</a>
+                    <a href="/provider_login">sign-in</a>
                   </button>
                 
              </div>
