--- a/views/provider_login.ejs
+++ b/views/provider_login.ejs
@@ -54,23 +54,21 @@
     }
 
     .google-btn {
-      background-color: #DB4437;
+      background-color: #4CAF50;
+      margin-top: 1vh;
     }
   </style>
 </head>
 <body>
+
   <div class="container">
-    <h2>User Registration</h2>
-    <form id="registration-form">
+    <h2>Provider Login</h2>
+
+    <form id="registration-form" >
       <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">Lounge Name</label>
         <input type="text" id="name" required>
       </div>
-      <div class="form-group">
-        <label for="">Name</label>
-        <input type="text" id="name" required>
-      </div>
-      
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" id="email" required>
@@ -79,18 +77,19 @@
         <label for="password">Password</label>
         <input type="password" id="password" required>
       </div>
-      <div class="form-group">
-        <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" required>
-      </div>
-      <button type="submit">Register</button>
-      <div id="google-login" class="form-group">
-        <button class="google-btn" onclick="loginWithGoogle()">Register with Google</button>
-      </div>
+     
+
+      <button type="submit">Login</button>
+      <button class="google-btn">Login with Google</button>
+
+      <p class="toggle-form-login">If you don't have account? Click here to register</p>
+
     </form>
+
+    <a href="/provider_register">Register</a>
   </div>
 
-  <script>
+  <!-- <script>
     function loginWithGoogle() {
       // Implement your logic for Google login here
       alert('Google login clicked');
@@ -108,6 +107,6 @@
       // Implement your logic for user registration here
       alert('Registration successful!');
     });
-  </script>
+  </script> -->
 </body>
 </html>
