--- a/views/provider_register.ejs
+++ b/views/provider_register.ejs
@@ -59,13 +59,22 @@
   </style>
 </head>
 <body>
+
   <div class="container">
-    <h2>User Registration</h2>
+    <h2>Provider Registration</h2>
+
     <form id="registration-form">
+
       <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">Loung Name</label>
         <input type="text" id="name" required>
       </div>
+
+      <div class="form-group">
+        <label for="username">username</label>
+        <input type="text" id="username" required>
+      </div>
+      
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" id="email" required>
@@ -79,13 +88,15 @@
         <input type="tel" id="phone" required>
       </div>
       <button type="submit">Register</button>
-      <div id="google-login" class="form-group">
-        <button class="google-btn" onclick="loginWithGoogle()">Register with Google</button>
-      </div>
+
+      <!-- <div id="google-login" class="form-group">
+        <button class="google-btn">Register with Google</button>
+      </div> -->
+
     </form>
   </div>
 
-  <script>
+  <!-- <script>
     function loginWithGoogle() {
       // Implement your logic for Google login here
       alert('Google login clicked');
@@ -103,6 +114,6 @@
       // Implement your logic for user registration here
       alert('Registration successful!');
     });
-  </script>
+  </script> -->
 </body>
 </html>
