update by himanshu

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,6 +50,7 @@
 
       <% include ./slider.ejs %>
       <% include ./about.ejs %>
+      <% include ./service.ejs %>
       <% include ./footer/footer.ejs %>
      
   </div>
