--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -4,12 +4,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+
 }
 
 footer {
     /* background-color: #f5f5f5; */
     background-color: #d8d5d5;
     padding: 20px;
+    z-index: 99999;
 }
 
 .footer-container {
