--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -1,44 +1,65 @@
 /* Style for the services section */
+
 #services {
     background-color: #f4f4f4;
     padding: 20px;
+    margin-top: -3vh;
     text-align: center;
+    background-color: #ffffff;
+    overflow: hidden;
+    /* background-color: #d41010; */
+
   }
   
   /* Style for the container div */
   .container {
-    /* display: flex; */
+    display: flex;
     /* flex-direction: row; */
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+    
   }
   
   /* Style for the service divs */
   .service {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     flex: 0 0 calc(50% - 20px);
+    /* width: 110%; */
+    /* height: 100vh; */
   }
   
   /* Style for the facilities div */
   .facilities {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    padding: 1vh 2vw;
+    padding: 0.1vh 2vw;
+    width: 50vh;
+
+    height: 65vh;
+    position: relative;
+
   }
-  
-  /* Style for the images */
+  .facilities-p{
+    /* background-color: #d41010; */
+    margin-left: 30px;
+    position: absolute;
+     top: 57%;
+     margin-left:3vw;
+  }
   .service img {
-    width: 45vw;
+    width: 48vw;
     max-width: 300px;
-    height: 50vh;
+    height: 35vh;
+    margin-left: 1vw;
   }
   
   /* Style for the buttons */
-  .btn {
+ .service .btn {
     display: inline-block;
     padding: 10px 20px;
     background-color: #333333;
@@ -50,13 +71,23 @@
   /* Style for the heading */
    .service>h3 {
     margin-bottom: 20px;
+    font-size: 1vw;
+    padding: .5vw;
     color:#d41010;
+  }
+  h2{
+    padding: 1vw;
+    font-size: 2vw;
   }
   
   /* Style for the unordered list */
  .facilities-p> ul {
     list-style-type: disc;
     margin-left: 20px;
+    font-size: 0.8vw;
+    font-weight: 100;
+    padding: 0.9vw;
+    
   }
   
   /* Responsive Styles */
@@ -71,13 +102,35 @@
         margin-top: 10px;
         display: flex;
         flex-direction: column;
+        margin-left: 3vw;
+      }
+      .facilities-p{
+        /* background-color: #d41010; */
+        margin-left: 30px;
+        position: absolute;
+         top: 50%;
+         margin-left:8vw;
+      }
+      .facilities-p> ul {
+        list-style-type: disc;
+        margin-left: 17vw;
+        font-size: 2.3vw;
+        padding: 1.8vw;
       }
       .service img {
-        width: 45vw;
+        width: 55vw;
         max-width: 300px;
-        height: 50vh;
-        margin-left: 14vw;
+        height: 28vh;
+        margin-left: 24vw;
 
+      }
+      .service .btn {
+        display: inline-block;
+        padding: 6px 12px;
+        background-color: #333333;
+        color: #ffffff;
+        text-decoration: none;
+        margin-top: 17px;
       }
       
   }
@@ -87,6 +140,7 @@
     .service {
       flex: 0 0 calc(50% - 20px);
     }
+    
   }
   
   /* Large screens (above 900px) */
