--- a/views/footer/nav.ejs
+++ b/views/footer/nav.ejs
@@ -15,7 +15,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#footer-container" >Contact</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="/get-started" id="contect">Login/Sign up</a></li>
           </ul>
         </nav>
