update by himanshu

--- a/views/provider_login.ejs
+++ b/views/provider_login.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>User Registration</title>
+  <link rel="shortcut icon" href="\images\logot.png" type="image/x-icon">
   <style>
     body {
       font-family: Arial, sans-serif;
