--- a/views/service.ejs
+++ b/views/service.ejs
@@ -3,6 +3,7 @@
 <head>
   <title>Food Ordering Service | Delicious Eats</title>
   <link rel="stylesheet" type="text/css" href="\stylesheets\service.css">
+  <link rel="shortcut icon" href="\images\logot.png" type="image/x-icon">
 </head>
 <body>
  
