--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,10 @@ html,body {
 		border-radius: 4px;
 		font-size: 16px;
 	  }
+	  a{
+		text-decoration: none;
+		color: azure;
+	  }
   
 	  button {
 		background-color: red;
