update by Himanshu

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
    
     <% include ./footer/nav.ejs %>
     
+    
 
 
     <!--      written by anmol header jisme chhose krna time and station-->
@@ -51,6 +52,7 @@
         
 
       <% include ./slider.ejs %>
+      <% include ./select-location.ejs %>
       <% include ./about.ejs %>
       <hr>
       <% include ./service.ejs %>
