--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
         
 
       <% include ./slider.ejs %>
-      <% include ./select-location.ejs %>
+      <!-- <% include ./select-location.ejs %> -->
       <% include ./about.ejs %>
       <hr>
       <% include ./service.ejs %>
