--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -10,6 +10,8 @@ body {
 footer {
     /* background-color: #f5f5f5; */
     background-color: #d8d5d5;
+    background-color: rgb(28,35,49);
+    color: #ffffff;
     padding: 20px;
     z-index: 99999;
 }
@@ -20,13 +22,18 @@ footer {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    max-width: 960px;
+    max-width: 100%;
     margin: 0 auto;
 
 }
 
 .footer-container p {
     margin: 0;
+    padding:  0.8vw  1vw;
+    font-size:1.3vw;
+    /* background-color: antiquewhite; */
+    width: 70%;
+    text-align: center;
 }
 
 .footer-link-div {
@@ -34,9 +41,11 @@ footer {
     flex-wrap: wrap;
     width: 100%;
     margin-top: 20px;
+    justify-content: space-between;
+    /* background-color: aqua; */
     justify-content: center;
 
-    /* padding: 1vw; */
+    padding: 1vw;
     overflow-x: hidden;
 }
 
@@ -55,15 +64,24 @@ footer {
 .footer-links li a {
     text-decoration: none;
     color: #333;
+    color: #ffffff;
 }
 
 .footer-icon {
     margin-top: 20px;
+    padding: 1vw;
 }
 
 .footer-icon i {
-    margin-right: 10px;
+    margin-right: 30px;
     font-size: 20px;
+    background-color: rgb(14, 109, 109);
+    border-radius: 50%;
+    padding: 5px;
+}
+.footer-icon i:hover{
+    background-color: #ffffff;
+    color: #333;
 }
 
 hr {
@@ -86,5 +104,11 @@ hr {
         margin-right: 15px;
         font-size: 14px;
        
+    }
+    .footer-container p{
+        font-size: 4vw;
+        padding: 2.5vw 0;
+        /* background-color: aqua; */
+
     }
 }
