--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="\stylesheets\about.css">
 </head>
 <body>
-  <div class="about-section">
+  <div class="about-section" id="about">
     <div class="inner-container">
       <h1>About Us</h1>
       <p class="text">
