--- a/views/footer/footer.ejs
+++ b/views/footer/footer.ejs
@@ -10,7 +10,7 @@
 <body>
     <footer>
         <div class="footer-container" id="footer-container">
-          <p>&copy; 2023 Your AIDEHI Enterprises. All rights reserved.</p>
+         
           <div class="footer-link-div">
             <ul class="footer-links">
               <li><a href="#">Home</a></li>
@@ -37,14 +37,14 @@
              
               <!-- <li><a href="#"></a></li> -->
             </ul>
-           
+            <ul class="footer-links" id="last-links">
+              <li><a href="#">Contact:--1234567890</a></li>
+              <li><a href="#">Email:--VAIDEHI@GMAIL.COM</a></li>
+              <li><a href="">Address:-Jinsi, 18, Shankar Ganj, <br> Indore, Madhya Pradesh 452006</a></li>
+            </ul>
           </div>
-          <br>
-          <ul class="footer-links" id="last-links">
-            <li><a href="#">Contact:--1234567890</a></li>
-            <li><a href="#">Email:--VAIDEHI@GMAIL.COM</a></li>
-            <li><a href="">Address:-Jinsi, 18, Shankar Ganj, Indore, Madhya Pradesh 452006</a></li>
-          </ul>
+          
+        
           <div class="footer-icon">
             <i class="ri-facebook-circle-fill"></i>
             <i class="ri-instagram-fill"></i>
@@ -52,6 +52,7 @@
             <i class="ri-whatsapp-fill"></i>
             <i class="ri-google-play-fill"></i>
           </div>
+          <p>&copy; 2023 Your AIDEHI Enterprises. All rights reserved.</p>
         </div>
     </footer>
 </body>
