--- a/views/service.ejs
+++ b/views/service.ejs
@@ -26,7 +26,7 @@
                       <li>Restrooms and shower facilities</li>
                     </ul>
          
-                    <a href="#" class="btn">Book a Table</a>
+                    <a href="/shetbook" class="btn">Book a Table</a>
                 </div>
             </div>
             <div class="service">
