update in backend

--- a/views/loggedInindex.ejs
+++ b/views/loggedInindex.ejs
@@ -22,6 +22,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#footer-container" >Contact</a></li>
             <li><a href="#">Services</a></li>
+            <li><a href="/userAccountPage">User Account</a></li>
             <!-- <li><a href="/get-started" id="contect">Login/Sign up</a></li> -->
           </ul>
         </nav>
