--- a/views/loungeProvider_login.ejs
+++ b/views/loungeProvider_login.ejs
@@ -63,12 +63,12 @@
 <body>
 
   <div class="container">
-    <h2>Provider Login</h2>
+    <h2>Lounge Provider Login</h2>
 
     <form id="registration-form" action="/loungeProviderLogin" method="post">
    
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">Lounge Provider Email</label>
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-group">
