--- a/views/loungeProvider_register.ejs
+++ b/views/loungeProvider_register.ejs
@@ -61,16 +61,16 @@
 <body>
 
   <div class="container">
-    <h2>Provider Registration</h2>
+    <h2>Lounge Provider Registration</h2>
 
     <form id="registration-form" action="/loungeProviderRegister" method="POST">
 
       <div class="form-group">
-        <label for="name">Provider Name</label>
+        <label for="name">Lounge Provider Name</label>
         <input type="text" id="name" name="name" required>
       </div>
       <div class="form-group">
-        <label for="email"> Provider Email</label>
+        <label for="email">Lounge Provider Email</label>
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-group">
@@ -78,13 +78,10 @@
         <input type="password" id="password" name="password" required>
       </div>
       <div class="form-group">
-        <label for="phone">Provider Phone Number</label>
+        <label for="phone">Lounge Provider Phone Number</label>
         <input type="tel" id="phone" name="phoneNo" required>
       </div>
-      <div class="form-group">
-        <label for="phone">Owner</label>
-        <input type="text" id="phone" name="phoneNo" required>
-      </div>
+      
       <button type="submit">Register</button>
 
       <!-- <div id="google-login" class="form-group">
