--- a/views/shopProvider_login.ejs
+++ b/views/shopProvider_login.ejs
@@ -68,7 +68,7 @@
     <form id="registration-form" action="/loungeProviderLogin" method="post">
    
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">Shop Provider Email</label>
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-group">
