--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         <h2>Login</h2>
         <form class="login-form" action="/login" method="post">
           <div>
-            <input type="text" id="name" placeholder="name" name="email" required />
+            <input type="email" id="email" placeholder="email" name="email" required />
           </div>
           <div>
             <input type="password" id="password" placeholder="Password" name="password" required/>
