--- a/views/shopProvider_register.ejs
+++ b/views/shopProvider_register.ejs
@@ -66,11 +66,11 @@
     <form id="registration-form" action="/loungeProviderRegister" method="POST">
 
       <div class="form-group">
-        <label for="name">Provider Name</label>
+        <label for="name">Shop Provider Name</label>
         <input type="text" id="name" name="name" required>
       </div>
       <div class="form-group">
-        <label for="email"> Provider Email</label>
+        <label for="email">Shop Provider Email</label>
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-group">
@@ -78,13 +78,10 @@
         <input type="password" id="password" name="password" required>
       </div>
       <div class="form-group">
-        <label for="phone">Provider Phone Number</label>
+        <label for="phone">Shop Provider Phone Number</label>
         <input type="tel" id="phone" name="phoneNo" required>
       </div>
-      <div class="form-group">
-        <label for="phone">Owner</label>
-        <input type="text" id="phone" name="phoneNo" required>
-      </div>
+    
       <button type="submit">Register</button>
 
       <!-- <div id="google-login" class="form-group">
