--- a/views/slider.ejs
+++ b/views/slider.ejs
@@ -27,8 +27,9 @@
 
     .swiper {
       width: 100%;
-      height: 50vh;
+      height: 90vh;
     }
+    
 
     .swiper-slide {
       text-align: center;
@@ -45,6 +46,13 @@
       height: 100%;
       object-fit: cover;
       background-size: cover;
+    }
+    @media screen and (max-width:600px) {
+      .swiper {
+      width: 100%;
+      height: 60vh;
+    }
+
     }
   </style>
 </head>
@@ -63,6 +71,7 @@
         <img src="/images/WhatsApp Image 2023-07-17 at 14.41.14.jpg" alt="">
       </div>
     </div>
+   
    
   </div>
 
