--- a/views/provider.ejs
+++ b/views/provider.ejs
@@ -4,28 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provider</title>
-    <style>
-        *{
-            margin: 0%;
-            padding: 0%;
-            box-sizing: border-box;
-        }
-        html,body{
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-      
-        
-    </style>
+   <link rel="stylesheet" href="\stylesheets\provider.css">
 </head>
 <body>
     <div id="main">
-        <h1>owner</h1> <br> <br>
-        <a href="/loungeProvider_login">Lounge Provider</a> <br> <br>
-        <a href="/shopProvider_login">Shop Provider</a>
+        <h1>owner login</h1> 
+        <br>
+        <div class="user_box">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
+            <a href="/loungeProvider_login">Lounge Provider</a>
+        </div>
+        <div class="user_box">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
+            <a href="/shopProvider_login">Shop Provider</a>
+        </div>
+       
     </div>
 </body>
 </html>
