--- a/public/stylesheets/function.css
+++ b/public/stylesheets/function.css
@@ -5,7 +5,7 @@
     font-family: Arial, sans-serif;
     padding: 4vw 10vw;
     background-color: #95a7b8;
-    display: none;
+    /* display: none; */
   }
 
   label {
