--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,8 @@ html,body {
 .page1{
 	/* background-color: aqua; */
 	width: 100%;
-	height: 88.6vh;
+	/* height: 88.6vh; */
+	flex-direction: column;
 	overflow: hidden;
 	display: flex;
 	background-color: #dfd6d694;
