--- a/views/shopProvider_login.ejs
+++ b/views/shopProvider_login.ejs
@@ -65,15 +65,15 @@
   <div class="container">
     <h2>Shop Provider Login</h2>
 
-    <form id="registration-form" action="/loungeProviderLogin" method="post">
+    <form id="registration-form" action="/shopProviderLogin" method="post">
    
       <div class="form-group">
         <label for="email">Shop Provider Email</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="shopEmail" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="shopPassword" required>
       </div>
      
 
