--- a/views/slider.ejs
+++ b/views/slider.ejs
@@ -26,11 +26,11 @@
     }
 
     .swiper {
-      width: 80%;
-      padding: 6vw 8vw;
+      width: 100%;
+      /* padding: 6vw 8vw; */
       /* background-color: #f8f8f8f5; */
       /* background-color: #dfd6d694; */
-      height: 88.6vh;
+      height: 73.6vh;
       /* position: absolute; */
 
     }
