--- a/views/slider.ejs
+++ b/views/slider.ejs
@@ -14,6 +14,7 @@
     body {
       position: relative;
       height: 100%;
+      width: 100%;
     }
 
     body {
@@ -26,11 +27,11 @@
     }
 
     .swiper {
-      width: 80%;
-      padding: 6vw 8vw;
+      width: 100%;
+      /* padding: 6vw 8vw; */
       /* background-color: #f8f8f8f5; */
       /* background-color: #dfd6d694; */
-      height: 88.6vh;
+      height: 74.2vh;
       /* position: absolute; */
 
     }
