--- a/views/footer/footer.ejs
+++ b/views/footer/footer.ejs
@@ -52,7 +52,7 @@
             <i class="ri-whatsapp-fill"></i>
             <i class="ri-google-play-fill"></i>
           </div>
-          <p>&copy; 2023 Your AIDEHI Enterprises. All rights reserved.</p>
+          <p>&copy; 2023 Your VAIDEHI Enterprises. All rights reserved.</p>
         </div>
     </footer>
 </body>
