--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
    
     <% include ./footer/nav.ejs %>
     <% include ./function.ejs %>
+    <% include ./slider.ejs %>
     <% include ./about.ejs %>
       <hr>
     <% include ./service.ejs %>
