--- a/views/loggedInindex.ejs
+++ b/views/loggedInindex.ejs
@@ -39,10 +39,7 @@
        </select>
    
        <label for="check-in-time">Check-in Time:</label>
-       <!-- <input type="time" name="chekIn" id="check-in-time"> -->
        <input type="datetime-local" id="check-in-time" name="checkIn">
-       <!-- <input type="time" id="check-in-time" name="checkIn"> -->
-
    
        <label for="check-out-time"> Check-out Time:</label>
        <input type="number" name="hours" id="check-out-time">
@@ -61,7 +58,7 @@
   </div>
    
 
- <div class="orderFood">
+ <!-- <div class="orderFood">
 
 
 
@@ -82,7 +79,7 @@
 
 
 
- </div>
+ </div> -->
 
 
  <script src="/javascripts/script.js"></script>
