--- a/views/provider.ejs
+++ b/views/provider.ejs
@@ -7,18 +7,28 @@
    <link rel="stylesheet" href="\stylesheets\provider.css">
 </head>
 <body>
+
+
+
+   
     <div id="main">
-        <h1>owner login</h1> 
-        <br>
-        <div class="user_box">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
-            <a href="/loungeProvider_login">Lounge Provider</a>
+        <h1 class="title">Provider Login</h1>
+
+        <div class="user_boxes">
+            <div class="user_box lounge">
+                <p class="box_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
+               <button> <a class="box_link" href="/loungeProvider_login">Lounge Provider</a></button>
+            </div>
+
+            <div class="user_box shop">
+                <p class="box_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
+                <button>
+                <a class="box_link" href="/shopProvider_login">Shop Provider</a>
+
+                </button>
+            </div>
         </div>
-        <div class="user_box">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
-            <a href="/shopProvider_login">Shop Provider</a>
-        </div>
-       
     </div>
+
 </body>
 </html>
