--- a/views/provider.ejs
+++ b/views/provider.ejs
@@ -5,13 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provider</title>
    <link rel="stylesheet" href="\stylesheets\provider.css">
+   <link rel="stylesheet" href="\stylesheets\nav.css">
+
 </head>
 <body>
 
 
 
    
+    <header class="header">
+        <img src="\images\logo.jpg" alt="" class="logo">
+        <nav class="navbar">
+          <ul class="main-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#footer-container" >Contact</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="/get-started" id="contect">Login/Sign up</a></li>
+          </ul>
+        </nav>
+        <button class="menu-toggle">&#9776;</button>
+      </header>
     <div id="main">
+        
         <h1 class="title">Provider Login</h1>
 
         <div class="user_boxes">
