--- a/public/stylesheets/provider.css
+++ b/public/stylesheets/provider.css
@@ -3,11 +3,12 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f0f0f0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  /* display: flex;
+  justify-content: center; */
+  /* align-items: center; */
+  /* min-height: 100vh; */
 }
+
 
 #main {
   background-color: #fff;
@@ -16,6 +17,8 @@ body {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   max-width: 700px;
+  margin-top: 120px;
+  margin-left: 27%;
 }
 
 .title {
